--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "spraywell-timer",
   "version": "1.0.0",
-  "type": "module",
+  "private": true,
   "dependencies": {
-    "sharp": "^0.33.3"
+    "gifencoder": "^2.0.1",
+    "skia-canvas": "^1.0.0"
   }
 }
